--- a/Index.html
+++ b/Index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Кино-клуб Одиссея</title>
+    <title>Кино-клуб "Одиссея"</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
     <div class="header-container">
-        <h1>Кино-клуб Одиссея</h1>
+        <h1>Кино-клуб "Одиссея"</h1>
         <nav>
             <ul>
                 <li><a href="#our-films">Обсуждения</a></li>
@@ -56,7 +56,7 @@
     </div>
 
     <section id="film-archive" class="film-section">
-        <h2 class="section-title">Наш архив</h2>
+        <h2 class="section-title">Архив наших работ</h2>
 
         <div class="video-posters-container">
             <div class="film-poster">
@@ -89,25 +89,25 @@
                 </a>
             </div>
         </div>
-
+        <h2 class="section-title">История обсуждения</h2>
         <div class="film-grid">
             <div class="film-card">
                 <img src="images/Jesus-Christ-Superstar.jpg" alt="Год производства: 1973" class="film-thumbnail">
                 <h3>Jesus Christ Superstar/Иисус Христос – суперзвезда</h3>
                 <p>Обсуждение 247 (05.07.2025)</p>
-                <div class="film-rating">★ ★ ★ ☆ ☆</div>
+                <div class="film-rating">★ ★ ★ ★ ★ ★ ★ ☆ ☆ ☆</div>
             </div>
             <div class="film-card">
                 <img src="images/The-Number-23.jpg" alt="Год производства: 2006" class="film-thumbnail">
                 <h3>The Number 23/Роковое число 23</h3>
                 <p>Обсуждение 246 (29.06.2025)</p>
-                <div class="film-rating">★ ★ ★ ☆ ☆</div>
+                <div class="film-rating">★ ★ ★ ★ ★ ★ ☆ ☆ ☆ ☆</div>
             </div>
             <div class="film-card">
                 <img src="images/There-Will-Be-Blood.jpg" alt="Год производства: 2007" class="film-thumbnail">
                 <h3>There Will Be Blood/Нефть</h3>
                 <p>Обсуждение 245 (22.06.2025)</p>
-                <div class="film-rating">★ ★ ★ ★ ☆</div>
+                <div class="film-rating">★ ★ ★ ★ ★ ★ ★ ★ ★ ☆</div>
             </div>
         </div>
     </section>
@@ -143,7 +143,7 @@
             P.S. Если не найдёшь — просто закажи пиццу. Мы обязательно откликнемся на запах.
         </p>
         <a href="https://t.me/ваш_бот" class="telegram-button" target="_blank">
-            <img src="images/telegram-icon.png" alt="">
+            <img src="images/telegram.png" alt="">
             Получать уведомления
         </a>
     </div>
@@ -154,5 +154,6 @@
 </footer>
 
 <script src="js/main.js"></script>
+
 </body>
 </html>
