--- a/index.html
+++ b/index.html
@@ -23,7 +23,35 @@
 
     <main role="main">
         <section id="our-films" class="film-section" aria-labelledby="films-heading">
+
+            <section id="top-lists" class="film-section" aria-labelledby="top-lists-heading">
+                <h2 id="top-lists-heading" class="section-title">Наши топы</h2>
+
+                <div class="top-container">
+                    <article class="top-list" aria-labelledby="top-films-heading">
+                        <h3 id="top-films-heading">Топ 10 фильмов</h3>
+                        <ol id="top-films-list" class="top-list-items" aria-live="polite">
+                            <li class="loading-message">Загрузка списка...</li>
+                        </ol>
+                    </article>
+
+                    <article class="top-list" aria-labelledby="top-directors-heading">
+                        <h3 id="top-directors-heading">Топ 10 режиссеров</h3>
+                        <ol id="top-directors-list" class="top-list-items" aria-live="polite">
+                            <li class="loading-message">Загрузка списка...</li>
+                        </ol>
+                    </article>
+
+                    <article class="top-list" aria-labelledby="top-genres-heading">
+                        <h3 id="top-genres-heading">Топ 10 жанров</h3>
+                        <ol id="top-genres-list" class="top-list-items" aria-live="polite">
+                            <li class="loading-message">Загрузка списка...</li>
+                        </ol>
+                    </article>
+                </div>
+            </section>
             <h1 id="films-heading" class="visually-hidden">О нашем кино-клубе</h1>
+
             <p>Мы — сборище киноманов, которые каждую неделю устраивают дебаты о фильмах. Нет, мы не смотрим кино вместе (это вам не сеанс в подвале), мы страстно его разбираем — с кофе, горячими мнениями и иногда драматичными оценками.</p>
 
             <article class="about-us">
