--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Пропуск ссылки для доступности -->
     <a class="skip-link visually-hidden" href="#main-content">Перейти к основному содержанию</a>
 
+    <!-- Шапка сайта -->
     <header class="header-container" role="banner">
         <div class="logo" aria-label="Логотип кино-клуба Одиссея">
             <img src="images/logo.svg" alt="Кино-клуб Одиссея" width="40" height="40" loading="lazy">
@@ -41,7 +43,9 @@
         </nav>
     </header>
 
+    <!-- Основное содержимое -->
     <main id="main-content" role="main">
+        <!-- Секция с топами и информацией о клубе -->
         <section id="our-films" class="film-section" aria-labelledby="films-heading">
             <section id="top-lists" class="film-section" aria-labelledby="top-lists-heading">
                 <h2 id="top-lists-heading" class="section-title">Наши топы</h2>
@@ -72,6 +76,7 @@
 
             <h1 id="films-heading" class="visually-hidden">О нашем кино-клубе</h1>
 
+            <!-- Информация о клубе -->
             <article class="about-us">
                 <h2>Как это работает?</h2>
                 <ul>
@@ -92,7 +97,7 @@
                     <p><strong>P.S.</strong> В день рождения вам разрешат выбрать <em>любой</em> фильм — даже «Человека-паука» в 4K с философским разбором</p>
                 </div>
 
-                <p class="cta" role="alert"><strong>🎬Давайте жевать попкорн и разбирать кино на молекулы!🍿</strong></p>
+                <p class="cta" role="alert"><strong>🎬 Давайте жевать попкорн и разбирать кино на молекулы! 🍿</strong></p>
 
                 <div class="button-container">
                     <button id="openModal" class="button" aria-haspopup="dialog">Найти нас</button>
@@ -100,20 +105,22 @@
             </article>
         </section>
 
+        <!-- Секция архива фильмов -->
         <section id="film-archive" class="film-section" aria-labelledby="archive-heading">
-            <h2 id="archive-heading" class="section-title">Архив наших работ</h2>
+            <h2 id="archive-heading" class="section-title">Архив наших обсуждений</h2>
             <div id="works-container" class="video-posters-container" aria-live="polite">
                 <div class="loading-message">Загрузка архива работ...</div>
             </div>
 
-            <h2 class="section-title">История обсуждения</h2>
+            <h2 id="discussion-history-heading" class="section-title">История обсуждений</h2>
             <div id="films-container" class="film-grid" aria-live="polite">
                 <div class="loading-message">Загрузка списка фильмов...</div>
             </div>
         </section>
 
+        <!-- Секция предложения фильмов -->
         <section id="suggest-film" class="film-section" aria-labelledby="suggest-heading">
-            <h2 id="suggest-heading" class="section-title">Предложи фильм</h2>
+            <h2 id="suggest-heading" class="section-title">Предложить фильм</h2>
             <form id="film-suggestion-form" class="suggestion-form" aria-label="Форма предложения фильма">
                 <div class="form-group">
                     <label for="film-title">Название фильма</label>
@@ -140,6 +147,7 @@
         </section>
     </main>
 
+    <!-- Модальное окно с контактами -->
     <dialog id="modal" class="modal" aria-labelledby="modal-heading">
         <div class="modal-content">
             <button class="close" aria-label="Закрыть модальное окно">&times;</button>
@@ -148,14 +156,14 @@
 
             <address>
                 <ul class="contact-info">
-                    <li><strong>📍 Место обсуждения:</strong> г. Севастополь, ул. Шмидта, 12. Кофейня "Том Сойер"</li>
+                    <li><strong>📍 Место встреч:</strong> г. Севастополь, ул. Шмидта, 12. Кофейня "Том Сойер"</li>
                     <li><strong>📞 Телефон для связи:</strong> <a href="tel:+79787363212">+79787363212</a></li>
                     <li><strong>📱 VK:</strong> <a href="https://vk.com/Odyssey_Cinema_Club_bot" target="_blank" rel="noopener noreferrer">Наша группа ВК</a></li>
                     <li><strong>📢 Telegram:</strong> <a href="https://t.me/Odyssey_Cinema_Club_bot" target="_blank" rel="noopener noreferrer">Наш бот</a></li>
                 </ul>
             </address>
 
-            <p class="modal-ps">P.S. Если не найдёшь — просто закажи пиццу. Мы обязательно откликнемся на запах.</p>
+            <p class="modal-ps">P.S. Если не найдёте — просто закажите пиццу. Мы обязательно откликнемся на запах.</p>
 
             <a href="https://t.me/Odyssey_Cinema_Club_bot" class="telegram-button" target="_blank" rel="noopener noreferrer">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="" width="20" height="20" loading="lazy">
@@ -164,6 +172,7 @@
         </div>
     </dialog>
 
+    <!-- Подвал сайта -->
     <footer role="contentinfo">
         <div class="footer-content">
             <p>© 2025 Кино-клуб. Все права защищены. Объективностью здесь и не пахнет! (с)</p>
@@ -175,15 +184,13 @@
         </div>
     </footer>
 
-    <!-- Загрузка скриптов с учетом производительности -->
+    <!-- Загрузка скриптов -->
     <script src="script.js" defer></script>
 
-    <!-- Резервный вариант для старых браузеров -->
+    <!-- Полифиллы для старых браузеров -->
     <script>
-        // Проверка поддержки современных возможностей
         if (!window.Promise || !window.fetch || !window.customElements) {
-            // Загрузка полифиллов для старых браузеров
-            var script = document.createElement('script');
+            const script = document.createElement('script');
             script.src = 'https://polyfill.io/v3/polyfill.min.js?features=Promise,fetch,Element.prototype.classList,NodeList.prototype.forEach';
             document.head.appendChild(script);
         }
