add resum user labenskiy

--- a/index.html
+++ b/index.html
@@ -1563,7 +1563,7 @@
                 <a href="#about" class="footer__link">О нас</a>
                 <a href="#movies" class="footer__link">Фильмы</a>
                 <a href="#contacts" class="footer__link">Контакты</a>
-                <a href="#form" class="footer__link">Обратная связь</a>
+                <a href="stanislav.html" class="footer__link">Автор сайта</a>
             </div>
             
             <div class="footer__social">
