fix text 'О нашем киноклубе'

--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
                 <div class="faq-item">
                     <div class="faq-question">
                         <span class="faq-icon">🎬</span>
-                        <h3>Кто вы?</h3>
+                        <h3>Кто мы?</h3>
                     </div>
                     <p class="faq-answer">Команда киноманов, которые каждую неделю собираются потрещать о фильме.</p>
                 </div>
