--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="#about" class="nav__link">О киноклубе</a>
             <a href="#contacts" class="nav__link">Контакты</a>
             <a href="#movies" class="nav__link">Фильмы</a>
+            <a href="gallery.html" class="nav__link">Фотогалерея</a>
         </nav>
         <button class="mobile-menu-btn">☰</button>
     </header>
