--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="movie-card">
                 <div class="movie-card__badge">Топ-10</div>
                 <div class="movie-card__content">
-                    <h3 class="movie-card__title">Лучшие режиссеры</h3>
+                    <h3 class="movie-card__title">Популярные режиссеры</h3>
                     <div class="movie-card__description">
                         <ol id="top-directors-list" class="top-list-items" aria-live="polite">
                             <li class="loading-message">Загрузка списка... Или включите VPN</li>
