--- a/index.html
+++ b/index.html
@@ -50,6 +50,22 @@
         </div>
     </section>
 
+    <!-- Карта -->
+    <section class="map-section">
+        <h2 class="section__title fade-in">Где мы собираемся</h2>
+        <div class="map-container fade-in delay-1">
+            <div id="map" style="width: 100%; height: 400px;"></div>
+            <div class="map-info">
+                <h3>Кофейня "Том Сойер"</h3>
+                <p>ул. Шмидта, 12, Севастополь</p>
+                <a href="https://vk.com/tomsoyerbartending" target="_blank" rel="noopener noreferrer" class="contact-card__link">Tom Soyer Bartending</a>
+                <p>Собираемся каждую неделю в выходные</p>
+                <p>Точное время и дату узнавать тут:</p>
+                <a href="https://t.me/Odyssey_Cinema_Club_bot" target="_blank" rel="noopener noreferrer" class="contact-card__link">@Odyssey_Cinema_Club_bot</a>
+            </div>
+        </div>
+    </section>
+
     <!-- О киноклубе -->
     <section id="about" class="about">
         <h2 class="section__title fade-in">О нашем киноклубе</h2>
